testsuite/tests/properties/can_reach/invalid/use_entity_info.lkt
import common

@abstract class FooNode implements Node[FooNode] {
    fun can_reach(n: FooNode): Bool = n.as_bare_entity = self
}
